--- a/_posts/2016-11-01-LEA.md
+++ b/_posts/2016-11-01-LEA.md
@@ -1,6 +1,6 @@
 ---
 layout: post
-title:	use LEA instruction to calculate address
+title:	Use LEA instruction to calculate address
 category: blog
 description:
 ---
